@ docs: 更新 README 文档，修正前后端项目结构与架构描述
- 根 README: 移除不存在的 docs/ 目录引用，补充购物车同步、AI 能力详述
- frontend README: 修正组件归属（MetricCard→ui/），补充遗漏的 useAppStore/NOTE_MAX_LENGTH
- frontend README: 移除不存在的 WebSocket 前端代码描述，修正状态管理为 ES module 导入
- metaFront README: 补充遗漏的 utils/ 目录和 cart API 模块

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>
@